--- a/redux-counter/package.json
+++ b/redux-counter/package.json
@@ -1,17 +1,19 @@
 {
   "scripts": {
+    "start": "webpack-dev-server --config webpack.dev.js",
     "dev": "webpack --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js"
   },
   "dependencies": {
-    "http-server": "^13.0.2",
     "redux": "^4.1.1"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "terser-webpack-plugin": "^5.2.5",
     "webpack": "^5.62.1",
     "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.4.0",
     "webpack-merge": "^5.8.0"
   }
 }
