--- a/redux-counter/package.json
+++ b/redux-counter/package.json
@@ -8,6 +8,9 @@
     "redux": "^4.1.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "terser-webpack-plugin": "^5.2.5",
