--- a/redux-counter/package.json
+++ b/redux-counter/package.json
@@ -12,6 +12,8 @@
     "@babel/preset-env": "^7.16.0",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
+    "eslint": "^7.32.0",
+    "eslint-loader": "^4.0.2",
     "html-webpack-plugin": "^5.5.0",
     "terser-webpack-plugin": "^5.2.5",
     "webpack": "^5.62.1",
