--- a/redux-counter/package.json
+++ b/redux-counter/package.json
@@ -13,8 +13,11 @@
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-loader": "^4.0.2",
+    "eslint-plugin-prettier": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "prettier": "^2.4.1",
     "terser-webpack-plugin": "^5.2.5",
     "webpack": "^5.62.1",
     "webpack-cli": "^4.9.1",
