--- a/vanilla-counter/class-counter/package.json
+++ b/vanilla-counter/class-counter/package.json
@@ -5,6 +5,9 @@
     "build": "webpack --config webpack.prod.js",
     "test": "jest"
   },
+  "jest": {
+    "testEnvironment": "jsdom"
+  },
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
@@ -18,6 +21,8 @@
     "eslint-loader": "^4.0.2",
     "eslint-plugin-prettier": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^27.3.1",
+    "jsdom": "^18.1.0",
     "mini-css-extract-plugin": "^2.4.5",
     "node-sass": "^6.0.1",
     "postcss-loader": "^6.2.0",
